run-app/hello-fun-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-fun-svc
  labels:
    app: hello-fun
  namespace: default
spec:
  ports:
  - name: 8080-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-fun
    tier: frontend
  type: ClusterIP
